einfügen icicle chart

--- a/test-MacBook Air von Andreas.ipynb
+++ b/test-MacBook Air von Andreas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,8 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import streamlit as st\n",
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "def colorset():\n",
     "    color_dict = {\n",
@@ -30,11 +32,11 @@
     "    def __init__(self):\n",
     "        import pandas as pd\n",
     "        self.data = pd.DataFrame({\n",
-    "            'Yahoo Ticker':['AAPL'],\n",
-    "            'Kaufpreis':[140.43],\n",
-    "            'Bestand':[30],\n",
-    "            'Kaufdatum':['21.03.2023'],\n",
-    "            'Anlageklasse':['Aktien']},index=None)\n",
+    "            'Yahoo Ticker':['AAPL','XS2689948078.SG','MSE.PA'],\n",
+    "            'Kaufpreis':[140.43, 150.32,100],\n",
+    "            'Bestand':[30,1000,100],\n",
+    "            'Kaufdatum':['21.03.2023','21.03.2023','21.03.2022'],\n",
+    "            'Anlageklasse':['Aktien','Anleihen','Aktien-ETF']},index=None)\n",
     "\n",
     "    def to_excel(self):\n",
     "        # Speichere das DataFrame in einen BytesIO-Stream\n",
@@ -61,7 +63,6 @@
     "    def __init__ (self, ticker):\n",
     "        self.ticker = ticker\n",
     "        self.assetclass = None\n",
-    "        self.name = None\n",
     "        self.data = None\n",
     "        self.assettyp = None\n",
     "        self.load_yf_data()\n",
@@ -94,9 +95,6 @@
     "        return self.pricehistory\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "class Portfolio:\n",
     "    def __init__ (self, data):\n",
     "        self.data = pd.read_excel(data)\n",
@@ -106,18 +104,30 @@
     "        self.geomean_return = None\n",
     "        self.portfolio_ccy = None\n",
     "\n",
+    "\n",
+    "\n",
     "    def prepare_df(self):\n",
+    "            \n",
+    "        self.pf.rename(columns={'Yahoo Ticker':'ticker', 'Kaufdatum':'purchasedate','Kaufpreis':'bookprice', 'Bestand':'amount', 'Anlageklasse':'assetclass'},inplace=True)\n",
+    "        self.pf['purchasedate'] = pd.to_datetime(self.pf['purchasedate']).dt.date\n",
+    "        self.wertpapiere = [Wertpapier(ticker) for ticker in self.pf['ticker']]\n",
     "\n",
-    "            self.pf.rename(columns={'Yahoo Ticker':'ticker', 'Kaufdatum':'purchasedate','Kaufpreis':'bookprice', 'Bestand':'amount'},inplace=True)\n",
-    "            self.pf['bookvalue'] = self.pf['bookprice'] * self.pf['amount']\n",
-    "            self.pf['purchasedate'] = pd.to_datetime(self.pf['purchasedate']).dt.date\n",
+    "        self.pf['isin'] = [wp.isin for wp in self.wertpapiere]\n",
+    "        self.pf['name'] = [wp.name for wp in self.wertpapiere]\n",
+    "        self.pf['current_price'] = [wp.price for wp in self.wertpapiere]\n",
+    "        self.pf['ccy'] = [wp.ccy for wp in self.wertpapiere]\n",
+    "        self.pf['industry'] = [wp.industry for wp in self.wertpapiere]\n",
+    "        self.pf['beta'] = [wp.beta for wp in self.wertpapiere]\n",
+    "        self.pf['country'] = [wp.country for wp in self.wertpapiere]\n",
+    "        \n",
+    "        # Berechnung des aktuellen Werts\n",
+    "        self.pf['bookvalue'] = np.where(self.pf['ticker'].str.contains('.SG'),self.pf['bookprice'] * self.pf['amount'] * 0.01, self.pf['bookprice'] * self.pf['amount'])\n",
+    "        self.pf['marketvalue'] = np.where(self.pf['ticker'].str.contains('.SG'),self.pf['current_price'] * self.pf['amount'] * 0.01, self.pf['current_price'] * self.pf['amount'])\n",
     "\n",
-    "            self.wertpapiere = [Wertpapier(ticker) for ticker in self.pf['ticker']]\n",
+    "        # Berechnung der Performance\n",
+    "        self.pf['performance'] = (self.pf['marketvalue'] - self.pf['bookvalue']) / self.pf['bookvalue']\n",
     "\n",
-    "            self.pf['isin'] = [wp.isin for wp in self.wertpapiere]\n",
-    "            self.pf['current_price'] = [wp.price for wp in self.wertpapiere]\n",
-    "            # Berechnung der Performance\n",
-    "            self.pf['performance'] = (self.pf['current_value'] - self.pf['bookvalue']) / self.pf['bookvalue']\n",
+    "\n",
     "\n",
     "    def geo_mean_return(self, pct_change_column):\n",
     "        \n",
@@ -179,28 +189,78 @@
     "                     x=self.category if self.orientation == 'vertical' else self.value,\n",
     "                     title=self.title)\n",
     "        fig.update_traces(marker=dict(color=colors))\n",
-    "        fig.update_layout(width=500, height=250, xaxis={'categoryorder': 'total descending'})\n",
+    "        width = 500 if self.orientation == 'vertical' else 250\n",
+    "        height = 500 if self.orientation == 'horizontal' else 250\n",
+    "        fig.update_layout(width=width, height=height, xaxis={'categoryorder': 'total descending'})\n",
     "        st.plotly_chart(fig)\n",
     "        \n",
     "        print(f\"Anzeigen als Balkendiagramm mit {self.orientation} Ausrichtung\")\n",
     "\n",
-    "\n"
+    "\n",
+    "class HeatmapChart(Charts):\n",
+    "    def __init__(self, title, data, x_category, y_category, value):\n",
+    "        super().__init__(title, data)\n",
+    "        self.x_category = x_category\n",
+    "        self.y_category = y_category\n",
+    "        self.value = value\n",
+    "        self.grouped_data = None\n",
+    "\n",
+    "    def prepare_data(self, aggregation='mean', bins=None):\n",
+    "        if bins:\n",
+    "            self.data[f'{self.x_category}_bin'] = pd.cut(self.data[self.x_category], bins=bins)\n",
+    "            self.data[f'{self.y_category}_bin'] = pd.cut(self.data[self.y_category], bins=bins)\n",
+    "            x_category, y_category = f'{self.x_category}_bin', f'{self.y_category}_bin'\n",
+    "        else:\n",
+    "            x_category, y_category = self.x_category, self.y_category\n",
+    "\n",
+    "        grouped = self.data.groupby([x_category, y_category])[self.value].agg(aggregation).reset_index()\n",
+    "        self.grouped_data = grouped.pivot(index=y_category, columns=x_category, values=self.value)\n",
+    "\n",
+    "    def plot(self):\n",
+    "        if self.grouped_data is None:\n",
+    "            self.prepare_data()\n",
+    "\n",
+    "        fig = go.Figure(data=go.Heatmap(\n",
+    "            z=self.grouped_data.values,\n",
+    "            x=self.grouped_data.columns,\n",
+    "            y=self.grouped_data.index,\n",
+    "            colorscale='RdYlGn',\n",
+    "            hoverongaps=True\n",
+    "        ))\n",
+    "\n",
+    "        fig.update_layout(\n",
+    "            title=self.title,\n",
+    "            xaxis_title=self.x_category,\n",
+    "            yaxis_title=self.y_category,\n",
+    "            width=800,\n",
+    "            height=600\n",
+    "        )\n",
+    "\n",
+    "        st.plotly_chart(fig)\n",
+    "\n",
+    "        print(\"Anzeigen als Heatmap\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "105.93"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "$X010.DE: possibly delisted; no price data found  (period=5d)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Open, High, Low, Close, Adj Close, Volume]\n",
+      "Index: []\n"
+     ]
     }
    ],
    "source": [
@@ -209,35 +269,37 @@
     "\n",
     "ticker = ['AAPL', 'GOOG','MBG.DE', 'X010.DE','XS2689948078.SG', 'NDA-SE.ST']\n",
     "\n",
-    "symbol = ticker[-2]\n",
+    "symbol = ticker[-3]\n",
     "\n",
     "\n",
     "\n",
     "stock = yf.Ticker(symbol)\n",
-    "stock.info['previousClose']\n",
+    "print(stock.history('5d'))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "119.7"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "Date\n",
+      "2024-08-23 00:00:00+02:00    105.93\n",
+      "Name: Close, dtype: float64\n"
+     ]
     }
    ],
    "source": [
+    "symbol = ticker[4]\n",
+    "\n",
     "stock2 = Wertpapier(symbol)\n",
-    "#stock2.get_base_data()\n",
-    "stock2.price"
+    "print(stock2.name)\n",
+    "print(stock2.get_pricehistory(period='5d'))"
    ]
   }
  ],
