--- a/test.ipynb
+++ b/test.ipynb
@@ -2,230 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'address1': '1600 Amphitheatre Parkway',\n",
-       " 'city': 'Mountain View',\n",
-       " 'state': 'CA',\n",
-       " 'zip': '94043',\n",
-       " 'country': 'United States',\n",
-       " 'phone': '650 253 0000',\n",
-       " 'website': 'https://abc.xyz',\n",
-       " 'industry': 'Internet Content & Information',\n",
-       " 'industryKey': 'internet-content-information',\n",
-       " 'industryDisp': 'Internet Content & Information',\n",
-       " 'sector': 'Communication Services',\n",
-       " 'sectorKey': 'communication-services',\n",
-       " 'sectorDisp': 'Communication Services',\n",
-       " 'longBusinessSummary': 'Alphabet Inc. offers various products and platforms in the United States, Europe, the Middle East, Africa, the Asia-Pacific, Canada, and Latin America. It operates through Google Services, Google Cloud, and Other Bets segments. The Google Services segment provides products and services, including ads, Android, Chrome, devices, Gmail, Google Drive, Google Maps, Google Photos, Google Play, Search, and YouTube. It is also involved in the sale of apps and in-app purchases and digital content in the Google Play and YouTube; and devices, as well as in the provision of YouTube consumer subscription services. The Google Cloud segment offers infrastructure, cybersecurity, databases, analytics, AI, and other services; Google Workspace that include cloud-based communication and collaboration tools for enterprises, such as Gmail, Docs, Drive, Calendar, and Meet; and other services for enterprise customers. The Other Bets segment sells healthcare-related and internet services. The company was incorporated in 1998 and is headquartered in Mountain View, California.',\n",
-       " 'fullTimeEmployees': 179582,\n",
-       " 'companyOfficers': [{'maxAge': 1,\n",
-       "   'name': 'Mr. Sundar  Pichai',\n",
-       "   'age': 50,\n",
-       "   'title': 'CEO & Director',\n",
-       "   'yearBorn': 1973,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 8802824,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Ms. Ruth M. Porat',\n",
-       "   'age': 65,\n",
-       "   'title': 'President & Chief Investment Officer',\n",
-       "   'yearBorn': 1958,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 2515700,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Dr. Lawrence Edward Page II',\n",
-       "   'age': 50,\n",
-       "   'title': 'Co-Founder & Director',\n",
-       "   'yearBorn': 1973,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 1,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Mr. Sergey  Brin',\n",
-       "   'age': 49,\n",
-       "   'title': 'Co-Founder & Director',\n",
-       "   'yearBorn': 1974,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 1,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Mr. J. Kent Walker',\n",
-       "   'age': 62,\n",
-       "   'title': 'President of Global Affairs, Chief Legal Officer & Company Secretary',\n",
-       "   'yearBorn': 1961,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 2511737,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Dr. Prabhakar  Raghavan',\n",
-       "   'age': 62,\n",
-       "   'title': 'Senior Vice President of Knowledge and Information - Google',\n",
-       "   'yearBorn': 1961,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 2511737,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Mr. Philipp  Schindler',\n",
-       "   'age': 52,\n",
-       "   'title': 'Senior Vice President & Chief Business Officer of Google',\n",
-       "   'yearBorn': 1971,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'totalPay': 2514032,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Ms. Anat  Ashkenazi',\n",
-       "   'age': 50,\n",
-       "   'title': 'Senior VP & CFO',\n",
-       "   'yearBorn': 1973,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': \"Ms. Amie Thuener O'Toole\",\n",
-       "   'age': 48,\n",
-       "   'title': 'Chief Accounting Officer & VP',\n",
-       "   'yearBorn': 1975,\n",
-       "   'fiscalYear': 2023,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0},\n",
-       "  {'maxAge': 1,\n",
-       "   'name': 'Ms. Ellen  West',\n",
-       "   'title': 'Vice President of Investor Relations',\n",
-       "   'fiscalYear': 2023,\n",
-       "   'exercisedValue': 0,\n",
-       "   'unexercisedValue': 0}],\n",
-       " 'auditRisk': 9,\n",
-       " 'boardRisk': 8,\n",
-       " 'compensationRisk': 10,\n",
-       " 'shareHolderRightsRisk': 10,\n",
-       " 'overallRisk': 10,\n",
-       " 'governanceEpochDate': 1722470400,\n",
-       " 'compensationAsOfEpochDate': 1703980800,\n",
-       " 'maxAge': 86400,\n",
-       " 'priceHint': 2,\n",
-       " 'previousClose': 165.49,\n",
-       " 'open': 166.56,\n",
-       " 'dayLow': 166.1107,\n",
-       " 'dayHigh': 167.235,\n",
-       " 'regularMarketPreviousClose': 165.49,\n",
-       " 'regularMarketOpen': 166.56,\n",
-       " 'regularMarketDayLow': 166.1107,\n",
-       " 'regularMarketDayHigh': 167.235,\n",
-       " 'dividendRate': 0.8,\n",
-       " 'dividendYield': 0.0047999998,\n",
-       " 'exDividendDate': 1725840000,\n",
-       " 'payoutRatio': 0.0287,\n",
-       " 'beta': 1.046,\n",
-       " 'trailingPE': 23.931135,\n",
-       " 'forwardPE': 21.357235,\n",
-       " 'volume': 1123746,\n",
-       " 'regularMarketVolume': 1123746,\n",
-       " 'averageVolume': 17641179,\n",
-       " 'averageVolume10days': 15656790,\n",
-       " 'averageDailyVolume10Day': 15656790,\n",
-       " 'bid': 166.76,\n",
-       " 'ask': 166.86,\n",
-       " 'bidSize': 100,\n",
-       " 'askSize': 100,\n",
-       " 'marketCap': 2041581928448,\n",
-       " 'fiftyTwoWeekLow': 121.46,\n",
-       " 'fiftyTwoWeekHigh': 193.31,\n",
-       " 'priceToSalesTrailing12Months': 6.2189503,\n",
-       " 'fiftyDayAverage': 176.4106,\n",
-       " 'twoHundredDayAverage': 156.77885,\n",
-       " 'trailingAnnualDividendRate': 0.2,\n",
-       " 'trailingAnnualDividendYield': 0.0012085323,\n",
-       " 'currency': 'USD',\n",
-       " 'enterpriseValue': 1965175865344,\n",
-       " 'profitMargins': 0.26702,\n",
-       " 'floatShares': 10983843700,\n",
-       " 'sharesOutstanding': 5584999936,\n",
-       " 'sharesShort': 45714908,\n",
-       " 'sharesShortPriorMonth': 42854852,\n",
-       " 'sharesShortPreviousMonthDate': 1719532800,\n",
-       " 'dateShortInterest': 1722384000,\n",
-       " 'sharesPercentSharesOut': 0.0033000002,\n",
-       " 'heldPercentInsiders': 0.00018999999,\n",
-       " 'heldPercentInstitutions': 0.62042,\n",
-       " 'shortRatio': 2.53,\n",
-       " 'impliedSharesOutstanding': 12347599872,\n",
-       " 'bookValue': 24.408,\n",
-       " 'priceToBook': 6.8338246,\n",
-       " 'lastFiscalYearEnd': 1703980800,\n",
-       " 'nextFiscalYearEnd': 1735603200,\n",
-       " 'mostRecentQuarter': 1719705600,\n",
-       " 'earningsQuarterlyGrowth': 0.286,\n",
-       " 'netIncomeToCommon': 87656996864,\n",
-       " 'trailingEps': 6.97,\n",
-       " 'forwardEps': 7.81,\n",
-       " 'pegRatio': 1.31,\n",
-       " 'lastSplitFactor': '20:1',\n",
-       " 'lastSplitDate': 1658102400,\n",
-       " 'enterpriseToRevenue': 5.986,\n",
-       " 'enterpriseToEbitda': 17.018,\n",
-       " '52WeekChange': 0.26627898,\n",
-       " 'SandP52WeekChange': 0.2644137,\n",
-       " 'lastDividendValue': 0.2,\n",
-       " 'lastDividendDate': 1717977600,\n",
-       " 'exchange': 'NMS',\n",
-       " 'quoteType': 'EQUITY',\n",
-       " 'symbol': 'GOOG',\n",
-       " 'underlyingSymbol': 'GOOG',\n",
-       " 'shortName': 'Alphabet Inc.',\n",
-       " 'longName': 'Alphabet Inc.',\n",
-       " 'firstTradeDateEpochUtc': 1092922200,\n",
-       " 'timeZoneFullName': 'America/New_York',\n",
-       " 'timeZoneShortName': 'EDT',\n",
-       " 'uuid': 'ee8cce8c-2475-31c0-8436-ecdf889cbfbd',\n",
-       " 'messageBoardId': 'finmb_29096',\n",
-       " 'gmtOffSetMilliseconds': -14400000,\n",
-       " 'currentPrice': 166.8,\n",
-       " 'targetHighPrice': 197.22,\n",
-       " 'targetLowPrice': 129.98,\n",
-       " 'targetMeanPrice': 179.81,\n",
-       " 'targetMedianPrice': 183.32,\n",
-       " 'recommendationMean': 1.8,\n",
-       " 'recommendationKey': 'buy',\n",
-       " 'numberOfAnalystOpinions': 12,\n",
-       " 'totalCash': 100724998144,\n",
-       " 'totalCashPerShare': 8.182,\n",
-       " 'ebitda': 115478003712,\n",
-       " 'totalDebt': 28718999552,\n",
-       " 'quickRatio': 1.897,\n",
-       " 'currentRatio': 2.079,\n",
-       " 'totalRevenue': 328284012544,\n",
-       " 'debtToEquity': 9.549,\n",
-       " 'revenuePerShare': 26.353,\n",
-       " 'returnOnAssets': 0.15961,\n",
-       " 'returnOnEquity': 0.30871,\n",
-       " 'freeCashflow': 43988500480,\n",
-       " 'operatingCashflow': 105059000320,\n",
-       " 'earningsGrowth': 0.314,\n",
-       " 'revenueGrowth': 0.136,\n",
-       " 'grossMargins': 0.57639,\n",
-       " 'ebitdaMargins': 0.35176,\n",
-       " 'operatingMargins': 0.32362998,\n",
-       " 'financialCurrency': 'USD',\n",
-       " 'trailingPegRatio': 1.1968}"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Program Files/Python311/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
     }
    ],
    "source": [
@@ -656,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
